# erm_support_assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/skills/code-review/: SKILL.md
.claude/skills/compliance/: SKILL.md  government-regulations.md  pci-dss-checklist.md  scan-patterns.md
.claude/skills/dba/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/fintech-attorney/: SKILL.md
.claude/skills/product-manager/: SKILL.md
gov_pay/: __init__.py  main.py
gov_pay/api/: schemas.py
gov_pay/config/: database.py  settings.py
gov_pay/services/: fee_service.py  payment_service.py  reporting_service.py
gov_pay/utils/: transaction_utils.py
migrations/: env.py
tests/unit/: test_erm_integration.py  test_fee_service.py  test_gateway_base.py  test_payment_service.py  test_payment_service_full.py  test_reporting_service.py  test_schemas.py  test_security_compliance.py  test_transaction_utils.py
tirithel/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
tirithel/agent/: __init__.py  __main__.py  agent.py  api_client.py  capture.py  input_tracker.py  tray.py
tirithel/api/: schemas.py
tirithel/api/routes/: guidance.py  knowledge.py  profiles.py  sessions.py
tirithel/config/: database.py  settings.py
tirithel/domain/: enums.py  models.py
tirithel/integrations/: llm.py  ocr.py
tirithel/processing/: conversation_segmenter.py  navigation_path_builder.py  screen_differ.py  ui_element_detector.py
tirithel/services/: conversation.py  embedding.py  guidance.py  knowledge.py  screen_capture.py  session_mapper.py
tirithel/static/: app.js  index.html  styles.css
tirithel/tests/: conftest.py  test_conversation_segmenter.py  test_models.py  test_navigation_path_builder.py  test_screen_differ.py  test_ui_element_detector.py
(+23 files in other folders)
